# market

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  alembic.ini  components.json  config.yaml  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  vite.config.ts
app/: __init__.py  data_access.py  deps.py  main.py  panel_contracts.py  scheduler.py
app/data_access/: __init__.py  coerce.py  config.py  decision_brief.py  decision_brief_options.py  loaders.py  mutations.py  normalize.py  payloads.py  postgres_panel.py  postgres_queries.py  postgres_source_queries.py  postgres_watchlist.py  publications.py  settings.py  ticker_dossier.py  types.py  user_state.py
app/routers/: __init__.py  agent.py  brokers.py  market_data.py  options.py  panel.py  portfolio.py  sources.py  system.py  theses.py  tickers.py
data/migration/: postgres-import-rehearsal-raw-facts.json  postgres-import-rehearsal-rerun.json  postgres-import-rehearsal.json
data/migration/backups/: market-20260711T162147Z.json  market-20260711T215831Z.json
data/trader_profiles/: catalyst-event.md  quality-compounder.md  risk-first.md
docs/: data-sources.md  finance-skills-integration.md  full-market-refresh.md  implementation-plan.md  page-data-audit-2026-07-12.md  postgresql-migration.md  schema-ddl-architecture-decision.md  trader-disclosure-pipeline.md  ui-improvement-audit-plan.md
frontend/src/: App.tsx  api.ts  apiPanelData.ts  hooks.ts  main.tsx  marketData.tsx  marketViews.tsx  model.ts  styles.css  types.ts  utils.ts
frontend/src/adapters/: tradingView.ts
frontend/src/components/: primitives.tsx
frontend/src/pages/: AgentRoute.tsx  CalendarRoute.tsx  DashboardRoute.tsx  FeedRoute.tsx  FilingsRoute.tsx  HealthRoute.tsx  MarketRoute.tsx  NotFoundRoute.tsx  OpportunitiesRoute.tsx  OptionsRadarRoute.tsx  PortfolioRoute.tsx  ResearchRoute.tsx  SettingsRoute.tsx  SourcesRoute.tsx  SuperinvestorsRoute.tsx  ThesisMonitorRoute.tsx  TickerRoute.tsx  TodayRoute.tsx  WatchlistRoute.tsx
frontend/src/styles/: globals.css
frontend/src/ui/: tone.ts
frontend/src/viewModels/: datasetProfiles.ts  portfolio.ts  thesisMonitor.ts  today.ts  watchlist.ts  watchlistMath.ts
frontend/src/views/: AlertBell.tsx  CalibrationPanel.tsx  OpportunityDetailDrawer.tsx  TradeJournalPanel.tsx  agent.tsx  dataGridSection.tsx  datasetPage.tsx  feed.tsx  genericPages.tsx  health.tsx  optionsRadar.tsx  optionsRadarData.ts  optionsRadarFormat.ts  optionsRadarPrimitives.tsx  optionsRadarTone.ts  portfolio.tsx  research.tsx  rowFormat.ts  settings.tsx  thesisMonitor.tsx  ticker.tsx  today.tsx  watchlist.tsx  workspacePage.tsx
migrations/: env.py
migrations/versions/: 20260711_0001_postgresql_authority.py  20260711_0002_outcome_and_catalyst_constraints.py  20260711_0003_job_heartbeats.py  20260711_0004_strategy_authority.py  20260712_0005_professional_options_radar.py  20260712_0006_options_discovery_foundation.py
ops/launchd/: com.joehu.market.hourly-options-radar.plist  com.joehu.market.premarket-options-intelligence.plist
prompts/: candidate_screen.md  catalyst_calendar.md  options_radar_deep_research.md  portfolio_review.md  settings_review.md  system_brief.md  thesis_update.md  ticker_memo.md  trader_twin.md
scripts/: ibkr_market_data_probe.py
src/investment_panel/: __init__.py
src/investment_panel/analysis/: __init__.py  cash_secured_put.py  correlation.py  earnings_setup.py  liquidity.py  market_environment.py  market_environment_scoring.py  option_ev.py  option_expressions.py  option_recommendation.py  options_payoff.py  registry.py  run.py  sepa.py  stats.py  valuation.py
src/investment_panel/core/: __init__.py  arco.py  brokers.py  coercion.py  config.py  config_mutations.py  crypto.py  daily_brief.py  db.py  decision.py  disclosures.py  event_calendar.py  free_sources.py  fundamentals.py  house_disclosures.py  ibkr_options.py  instruments.py  option_agent_postmortem.py  option_agent_runner.py  option_agent_thesis.py  option_scan.py  options_intelligence.py  options_radar.py  options_radar_alerts.py  options_radar_coerce.py  options_radar_constants.py  options_radar_filters.py  options_radar_greeks.py  options_radar_indicators.py  options_radar_quality.py  options_radar_session.py  panel.py  portfolio.py  portfolio_intelligence.py  preopen_brief.py  prices.py  refresh_jobs.py  research.py  retention.py  robinhood_options.py  (+11 more)
src/investment_panel/database/: __init__.py  actions.py  agents.py  analysis.py  authority.py  backup.py  brokers.py  configuration.py  ingestion.py  jobs.py  legacy_bootstrap.py  legacy_import.py  market_analysis.py  migrations.py  options.py  options_analysis.py  options_calibration.py  options_constants.py  options_discovery.py  options_expressions.py  options_publication.py  options_retention.py  outcomes.py  retention.py  runtime.py  source_facts.py  sources.py  strategy_governance.py  strategy_learning.py  strategy_parameters.py  today_analysis.py
src/investment_panel/jobs/: daily_screen.py  (+32 more)
tests/: conftest.py  test_agent_control.py  test_api.py  test_architecture_guards.py  test_broker_agent.py  test_call_debit_spread.py  test_candidate_event_ev.py  test_cash_secured_put.py  test_conviction_calibration.py  test_core_flow.py  test_decision_grade_contracts.py  test_disclosures.py  test_event_calendar.py  test_free_sources.py  test_full_market_refresh.py  test_fundamentals_read_model.py  test_hourly_options_radar.py  test_ibkr_options.py  test_instruments.py  test_live_sources.py  test_openai_option_agent.py  test_opencli.py  test_option_agent_consolidated.py  test_option_agent_postmortem.py  test_option_agent_runner.py  test_option_agent_thesis.py  test_option_ev.py  test_option_expressions.py  test_option_flow_features.py  test_option_recommendation.py  test_options_intelligence.py  test_options_radar.py  test_options_radar_learning_loop.py  test_options_radar_session.py  test_panel.py  test_panel_registry.py  test_portfolio_intelligence.py  test_postgres_agents_actions.py  test_postgres_analysis.py  test_postgres_arco_sources.py  (+38 more)
(+194 files in other folders)
