[project]
name = "investment-panel"
version = "0.1.0"
description = "Local investment signal and research panel."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "ibapi>=9.81.1",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pypdf>=6.11.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
  "yfinance>=0.2.60",
]

[project.optional-dependencies]
market-data = [
  "pandas-datareader>=0.10.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
market-daily-screen = "investment_panel.jobs.daily_screen:main"
market-snapshot-database = "investment_panel.jobs.snapshot_database:main"
market-weekly-review = "investment_panel.jobs.weekly_portfolio_review:main"
market-research-candidate = "investment_panel.jobs.research_candidate:main"
market-update-free-sources = "investment_panel.jobs.update_free_sources:main"
market-update-event-calendar = "investment_panel.jobs.update_event_calendar:main"
market-refresh-decision-models = "investment_panel.jobs.refresh_decision_models:main"
market-refresh-options-radar = "investment_panel.jobs.refresh_options_radar:main"
market-run-option-agents = "investment_panel.jobs.run_option_agents:main"
market-openai-option-thesis-agent = "investment_panel.jobs.openai_option_agent:main_thesis"
market-codex-option-thesis-agent = "investment_panel.jobs.openai_option_agent:main_codex_thesis"
market-openai-option-postmortem-agent = "investment_panel.jobs.openai_option_agent:main_postmortem"
market-codex-option-postmortem-agent = "investment_panel.jobs.openai_option_agent:main_codex_postmortem"
market-full-refresh = "investment_panel.jobs.full_market_refresh:main"
market-backfill-trader-disclosures = "investment_panel.jobs.backfill_trader_disclosures:main"
market-benchmark-trader-replica = "investment_panel.jobs.benchmark_trader_replica:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_panel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
