[project]
name = "investment-panel"
version = "0.1.0"
description = "Local investment signal and research panel."
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1.3",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "ibapi>=9.81.1",
  "pandas>=2.2.0",
  "pydantic>=2.9.0",
  "pypdf>=6.11.0",
  "pyyaml>=6.0.0",
  "uvicorn>=0.30.0",
  "yfinance>=0.2.60",
]

[project.optional-dependencies]
market-data = [
  "pandas-datareader>=0.10.0",
]
test = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.scripts]
market-daily-screen = "investment_panel.jobs.daily_screen:main"
market-snapshot-database = "investment_panel.jobs.snapshot_database:main"
market-weekly-review = "investment_panel.jobs.weekly_portfolio_review:main"
market-research-candidate = "investment_panel.jobs.research_candidate:main"
market-update-free-sources = "investment_panel.jobs.update_free_sources:main"
market-update-robinhood-options = "investment_panel.jobs.update_robinhood_options:main"
market-update-event-calendar = "investment_panel.jobs.update_event_calendar:main"
market-update-preopen-daily-brief = "investment_panel.jobs.update_preopen_daily_brief:main"
market-refresh-decision-models = "investment_panel.jobs.refresh_decision_models:main"
market-refresh-options-radar = "investment_panel.jobs.refresh_options_radar:main"
market-hourly-options-radar = "investment_panel.jobs.hourly_options_radar:main"
market-premarket-options-intelligence = "investment_panel.jobs.premarket_options_intelligence:main"
market-run-option-agents = "investment_panel.jobs.run_option_agents:main"
market-openai-option-thesis-agent = "investment_panel.jobs.openai_option_agent:main_thesis"
market-codex-option-thesis-agent = "investment_panel.jobs.openai_option_agent:main_codex_thesis"
market-openai-option-postmortem-agent = "investment_panel.jobs.openai_option_agent:main_postmortem"
market-codex-option-postmortem-agent = "investment_panel.jobs.openai_option_agent:main_codex_postmortem"
market-openai-option-agent = "investment_panel.jobs.openai_option_agent:main_agent"
market-codex-option-agent = "investment_panel.jobs.openai_option_agent:main_codex_agent"
market-full-refresh = "investment_panel.jobs.full_market_refresh:main"
market-backfill-trader-disclosures = "investment_panel.jobs.backfill_trader_disclosures:main"
market-benchmark-trader-replica = "investment_panel.jobs.benchmark_trader_replica:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/investment_panel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
# Module length is enforced by tests/test_architecture_guards.py (the 700-line
# size guard), so line-length (E501) is intentionally NOT a ruff concern.
target-version = "py311"
extend-exclude = [".venv", "frontend", "build", "dist"]

[tool.ruff.lint]
# High-signal, zero-false-positive rules that are GREEN today, so `make check`
# stays a real gate rather than a wall of pre-existing noise. Deliberately NOT
# enforced yet (each needs a small cleanup first):
#   F401 unused-import  - this codebase relies on implicit re-exports that lack
#                         `__all__`, so F401 has many false positives (and its
#                         autofix breaks imports). Add `__all__` to re-exporting
#                         modules, then enable F401.
#   F811 redefinition   - a few broker modules shadow `dataclasses.field`.
#   B    flake8-bugbear - 4 pre-existing findings to triage.
# Widen this list as the codebase is cleaned.
select = [
  "E9",                              # syntax / IO / runtime errors
  "F63", "F7",                       # logic errors (assert tuple, break outside loop, ...)
  "F501", "F502", "F503", "F506", "F509",  # %-format string bugs
  "F601", "F602",                    # `is` / `is not` against a literal
  "E711", "E712", "E713", "E714",    # `== None`, `== True`, `not in`, `not ... is`
  "E722",                            # bare `except:`
  "PLE",                             # pylint error-class rules
]
